add serilog logging

--- a/src/Helmut.Operations/appsettings.json
+++ b/src/Helmut.Operations/appsettings.json
@@ -1,9 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Serilog": {
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./logs/log-.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
   "ConnectionStrings": {
     "ServiceBus": "Endpoint=sb://radar-messager.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=aE3VE6qkAjLTHodNG9hX11Bz3RHGQSwUmArF6hpHIF0="
