--- a/src/Helmut.Operations/Helmut.Operations.csproj
+++ b/src/Helmut.Operations/Helmut.Operations.csproj
@@ -8,9 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.9.0" />
-    <PackageReference Include="Azure.ResourceManager" Version="1.2.1" />
+    <!--<PackageReference Include="Azure.ResourceManager" Version="1.2.1" />-->
     <PackageReference Include="Microsoft.Extensions.Azure" Version="1.3.0" />
-    <PackageReference Include="StackExchange.Redis" Version="2.6.48" />
+    <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
+    <!--<PackageReference Include="StackExchange.Redis" Version="2.6.48" />-->
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
