--- a/src/Helmut.Radar/Helmut.Radar.csproj
+++ b/src/Helmut.Radar/Helmut.Radar.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.9.0" />
     <PackageReference Include="Microsoft.Extensions.Azure" Version="1.3.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
