--- a/src/Helmut.Operations/Helmut.Operations.csproj
+++ b/src/Helmut.Operations/Helmut.Operations.csproj
@@ -4,14 +4,17 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>4e8a8bfe-2092-4a38-b1a3-b8c1f9a76541</UserSecretsId>
+    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+    <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.9.0" />
-    <!--<PackageReference Include="Azure.ResourceManager" Version="1.2.1" />-->
     <PackageReference Include="Microsoft.Extensions.Azure" Version="1.3.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
-    <!--<PackageReference Include="StackExchange.Redis" Version="2.6.48" />-->
+    <PackageReference Include="StackExchange.Redis" Version="2.6.48" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
