--- a/src/Helmut.Operations/appsettings.json
+++ b/src/Helmut.Operations/appsettings.json
@@ -19,5 +19,8 @@
   "AzureServiceBus": {
     "QueueName": "coordinates-queue"
   },
+  "Docker": {
+    "Url": "http://0.0.0.0:5001"
+  },
   "AllowedHosts": "*"
 }
