add radar sql db

--- a/src/Helmut.Radar/appsettings.json
+++ b/src/Helmut.Radar/appsettings.json
@@ -19,5 +19,8 @@
   "Docker": {
     "Url": "http://0.0.0.0:5002"
   },
+  "DbContext": {
+    "ConnectionString": "Server=(localdb)\\mssqllocaldb ;database=RadarDb;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
