--- a/src/Helmut.Operations/Helmut.Operations.csproj
+++ b/src/Helmut.Operations/Helmut.Operations.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.9.0" />
     <PackageReference Include="Microsoft.Extensions.Azure" Version="1.3.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
+    <PackageReference Include="NetCoreStack.DispatchProxyAsync" Version="2.2.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.6" />
     <PackageReference Include="NRedisGraph" Version="1.8.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
